Fix a bug with change block width after scrollbar show/hide.

--- a/style.css
+++ b/style.css
@@ -30,6 +30,7 @@ html {
   background: url(./img/main-background.jpg), url(./img/main-background2.jpg);
   background-repeat: repeat, repeat;
   background-blend-mode:lighten;
+  padding: 0 calc(20px - (100vw - 100%)) 0 0;
 }
 
 .wrapper {
